<resources>
    <string name="app_name">Lab2</string>
    <string name="Header">中山大学学生信息系统</string>
    <string name="SID">学号：</string>
    <string name="Hint_SID">请输入学号</string>
    <string name="Password">密码：</string>
    <string name="Hint_PW">请输入密码</string>
    <string name="status1">学生</string>
    <string name="status2">教职工</string>
    <string name="login">登录</string>
    <string name="SignUp">注册</string>
    <string name="clk_img_upload">上传头像</string>
    <string name="clk_img_shoot">拍摄</string>
    <string name="clk_img_choose">从相册选择</string>
    <string name="Tst_msg_shot">您选择了[拍摄]</string>
    <string name="Tst_msg_choose">您选择了[从相册选择]</string>
    <string name="Tst_msg_cancel">您选择了[取消]</string>
    <string name="Tst_msg_confirm">Snackbar 的确定按钮被点击了</string>
    <string name="Snk_msg_std">您选择了学生</string>
    <string name="Snk_msg_tch">您选择了教职工</string>
    <string name="Textip_IDnull">学号不能为空</string>
    <string name="Textip_PWnull">密码不能为空</string>
    <string name="success">登陆成功</string>
    <string name="wrong">学号或密码错误</string>
    <string name="Snk_msg_not">学生注册功能尚未启用</string>
    <string name="Tst_msg_not">教职工注册功能尚未启用</string>
</resources>
